publication: controller, mapper + research: mapper, service, controller (backend)